# image-calibration

./: README.md  pyproject.toml
src/mangonetwork/calibrate/: calibrate.py  checkcal.py  starcal.py
