[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "mangonetwork-calibrate"
dynamic = ["version"]
description = "MANGO imager calibration"
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
authors = [
    { name='Asti Bhatt', email='asti.bhatt@sri.com' },
    { name='Leslie Lamarche', email='leslie.lamarche@sri.com' },
    { name='Todd Valentic', email='todd.valentic@gmail.com' }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "matplotlib",
    "pandas",
    "skyfield",
    "importlib_resources>1.3; python_version < '3.10'"
]

[project.optional-dependencies]
test = [
    'pytest',
    'pyfakefs',
    'pylint',
    'black'
]
devel = [
    'build'
]

[project.urls]
homepage="https://www.mangonetwork.org"
repository="https://github.com/mangonetwork/raw-image-processing"

[project.scripts]
    mango-calibrate = "mangonetwork.calibrate.calibrate:main"
    mango-starcal = "mangonetwork.calibrate.starcal:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "mangonetwork.calibrate.__version__"}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]

